    and others which don't have X11 or OpenGL devel
    files installed).
  - Added explicit typecasts to suppress compile warnings.
  - Restored some of the Windows configuration from pre-0.101.2
    to allow use on older R versions.
  - Dropped use of mathjaxr, which caused issues on Debian.
  - Fixed some small bugs, found by lintr.
  - Fixed bugs in Shiny support, and moved Shiny demo code into
    single files in demo directory.
  - Experimental support for handling mouse selection in Shiny
    added, along with "shinyMouse" demo.
  - Fixed bugs in addNormals.mesh3d method, added angleWeighted
    argument, defaulting to TRUE.
  - Fixed bugs in rglwidget() displays of transparent spheres.
  - The result of open3d() now has class "rglOpen3d",
    and knitr will use this during auto-plotting.

0.105.6:
  - Windows builds now download Freetype from rwinlib
    during the build.  (Contributed by Jeroen Ooms.)
  - shinySetPar3d() now accepts a list, as returned in
    input$par3d by shinyGetPar3d(), as input.  (Suggestion
    of Yohann Demont.)
  - Inclusion in knitr documents will now be simplified
    in versions of knitr that incorporate its PR#1892.
  - The default color scheme for filledContour3d changed in
    R versions previous to 3.6.0, as hcl.colors() didn't 
    exist in those versions.  (Reported by Daniel Baston.)
  - Testing shows that with the above change, rgl will now
    work in R versions from 3.3.0 up.
  - Added "webshot" argument to snapshot3d(), to use the
    webshot2 package (currently only available from
    Github; see ?snapshot3d for details) to produce snapshots
    even on headless systems.  
  - snapshot3d() now defaults to writing to a temporary file
    instead of failing if no filename is given.
  - Both snapshot3d() and rgl.snapshot() now return the 
    output filename invisibly.
  - Some bugs in thigmophobe3d, mergeVertices and 
    as.mesh3d.default have been fixed.
  - Moved development home from R-forge to Github