@@ -364,12 +364,17 @@ set3d <- function(dev, silent = FALSE) {
     else return(open3d())
 }
 
+requireWebshot2 <- function() {
+  suppressMessages(res <- requireNamespace("webshot2", quietly = TRUE))
+  res
+}
+
 snapshot3d <- function(filename = tempfile(fileext = ".png"), 
                        ..., scene, width = NULL, height = NULL,
                        webshot = TRUE) {
   force(filename)
   
-  if (webshot && !requireNamespace("webshot2", quietly = TRUE)) {
+  if (webshot && !requireWebshot2()) {
     warning("webshot = TRUE requires the webshot2 package; using rgl.snapshot() instead")
     webshot <- FALSE
   }
@@ -429,7 +434,8 @@ snapshot3d <- function(filename = tempfile(fileext = ".png"),
     saveWidget(rglwidget(scene,
                          elementId = "webshot",
                          width = width,
-                         height = height), 
+                         height = height,
+                         webgl = TRUE), 
                f1)
     capture.output(webshot2::webshot(f1, file = filename, selector = "#webshot",
                         vwidth = width + 100, vheight = height, ...),
