@@ -1,0 +1,70 @@
+---
+title: "Untitled"
+author: "Duncan Murdoch"
+date: "05/02/2021"
+output: html_document
+---
+
+## Setup
+
+```{r setup, include=FALSE}
+options(rgl.useNULL = TRUE)
+library(rgl)
+knitr::opts_chunk$set(echo = TRUE, fig.height = 2, fig.width = 6)
+setupKnitr()
+```
+
+```{r}
+ids <- plot3d(matrix(rnorm(3000), ncol = 3, dimnames = list(NULL, letters[1:3])), col = "blue")
+```
+
+## rglwidgets with `webgl = TRUE`
+
+```{r}
+rglwidget(webgl = TRUE)
+```
+
+```{r}
+rglwidget(webgl = TRUE) %>% toggleWidget(ids = ids)
+```
+
+
+```{r}
+toggleWidget(NA, ids = ids) %>% rglwidget(webgl = TRUE, controller = .)
+```
+
+## Now with `webgl = FALSE`
+
+```{r}
+rglwidget(webgl = FALSE)
+```
+
+```{r}
+rglwidget(webgl = FALSE) %>% toggleWidget(ids = ids)
+```
+
+
+```{r}
+toggleWidget(NA, ids = ids) %>% rglwidget(webgl = FALSE, controller = .)
+```
+
+## Testing asRow
+
+```{r}
+asRow(rglwidget(webgl=TRUE), rglwidget(webgl = TRUE))
+```
+
+```{r}
+asRow(rglwidget(webgl=FALSE), rglwidget(webgl = FALSE))
+```
+
+```{r}
+toggle <- toggleWidget(NA, ids)
+asRow(toggle, rglwidget(webgl = TRUE, controller = toggle))
+```
+
+```{r}
+toggle <- toggleWidget(NA, ids)
+asRow(toggle, rglwidget(webgl = FALSE), 
+      rglwidget(controller = toggle))
+```
